<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">要健康</string>
    <string name="stream_load_more">加载更多</string>
    <!-- guide -->
    <string name="guide_skip">跳过</string>
    <string name="guide_next">下一步</string>
    <string name="guide_end">完成</string>

    <!-- tab -->
    <string name="tab_drug_helper_title">用药助手</string>
    <string name="tab_health_updates_title">健康时讯</string>
    <string name="tab_drug_store_title">附近药店</string>
    <string name="tab_person_center_title">个人中心</string>

    <string name="search_drug">输入药品名、疾病或者扫描药盒条码\t搜索</string>

    <string name="list_item_group_more">更多</string>

    <!--Login-->
    <string name="account_name_hint">用户名(手机号)</string>
    <string name="account_pwd_hint">密码</string>
    <string name="sign_in">登录</string>
    <string name="sign_up">注册</string>
    <!--Menu-->
    <string name="menu_help">帮助</string>
    <string name="menu_search">搜索</string>


    <string name="nearby_pharmacy_back_to_map">查看地图</string>
    <string name="search_pharmacy_location_progress_message">正在等待定位获取当前位置...</string>

    <string name="load_more">加载更多</string>
    <string name="title_activity_illness">IllnessActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_shop_car">ShopCarActivity</string>


    <!--Intro view-->
    <string name="Page1Title">要健康</string>
    <string name="Page2Title">更快</string>
    <string name="Page3Title">免费</string>
    <string name="Page4Title">安全</string>
    <string name="Page5Title">扩展</string>
    <string name="Page6Title">云存储</string>
    <string name="Page7Title">私密</string>
    <string name="Page1Message">一款让工作沟通更简单,更便捷的企业IM应用.<![CDATA[<br/>]]>它免费并且安全.</string>
    <string name="Page2Message"><![CDATA[<b>雨诺工作圈</b>]]> 让工作之间的沟通变的简单,便捷.</string>
    <string name="Page3Message"><![CDATA[<b>雨诺工作圈</b>]]> 它是免费的,没有广告.<![CDATA[<br/>]]>完全为了您的工作服务</string>
    <string name="Page4Message"><![CDATA[<b>雨诺工作圈</b>]]> 可以保证信息传输的安全.</string>
    <string name="Page5Message"><![CDATA[<b>雨诺工作圈</b>]]> 微应用的强大扩展,电子化作业的利器.</string>
    <string name="Page6Message"><![CDATA[<b>雨诺工作圈</b>]]> 不怕丢失,云存储同步,多设备同步企业通讯录.</string>
    <string name="Page7Message"><![CDATA[<b>雨诺工作圈</b>]]> 稳定,安全是我们的责任.</string>
    <string name="StartMessaging">开启健康之旅</string>


    <!-- IM -->
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="voice">声音</string>

    <!--anlc-->
    <string name="no_address_hint">您还没有收获地址</string>
    <string name="add">添 加</string>
    <string name="add_new_address">新增收获地址</string>
    <string name="set_default_hint">是否设置默认</string>
    <string name="save">保 存</string>
    <string name="choose_address_ok">确认选择</string>
    <string name="evaluate_quality">药品质量</string>
    <string name="evaluate_speed">送货速度</string>
    <string name="close">关闭</string>
    <string name="finish">完成</string>
    <string name="my_feedback_tag_title">我的意见标签</string>
    <string name="submit">提交反馈</string>
    <string name="reset">重&#160;&#160;&#160;&#160;置</string>

    <string name="prompt">提示</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <string name="member">点此输入会员卡卡号</string>

    <string name="order_cancel_tip_for_payed">友情提示：暂不支持在线取消已付款订单，请致电客服电话！给您带来的麻烦请谅解！\n点击此处联系客服...</string>
    <string name="order_cancel_alert_for_payed">暂不支持在线取消已付款订单，如果需要取消，请致电客服电话！给您带来的麻烦请谅解！\n点击此处联系客服...</string>
    <string name="submit_order_medicare_tip">友情提示：请您确认好要结算的商品，药品无质量问题不退不换哟！</string>
    <string name="submit_order_medicare_alert">请您确认好要结算的商品，药品无质量问题不退不换哟！</string>
</resources>