<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_actionbar_with_headerbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_login_container"
            android:orientation="vertical">

            <EditText
                android:id="@+id/account_name"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_name_hint"
                android:inputType="phone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:background="@color/md_grey_500" />

            <EditText
                android:id="@+id/account_pwd"
                style="@style/LoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_pwd_hint"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/sign_in"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in"
            android:textSize="@dimen/text_size_large" />

    </LinearLayout>
</LinearLayout>