<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <com.romens.android.ui.ActionBar.ActionBar
        android:id="@+id/feed_back_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/my_feedback_tag_title"
        android:textColor="@color/theme_sub_title"
        android:textSize="@dimen/title_sub_size"/>

    <FrameLayout
        android:id="@+id/feed_back_select_tag_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="8dp"
        android:background="#ccc"
        android:padding="8dp"/>

    <com.romens.yjk.health.ui.components.FlowLayout
        android:id="@+id/feed_back_flow_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"/>

    <!--<com.romens.yjk.health.ui.cells.EditTagCell-->
        <!--android:id="@+id/feed_back_edit_tag"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"/>-->

    <EditText
        android:id="@+id/feed_back_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/bg_light_gray"
        android:gravity="top|left"
        android:minLines="5"
        android:textColor="@color/theme_sub_title"
        android:textSize="@dimen/title_sub_size"/>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="8dp"-->
        <!--android:orientation="horizontal">-->

        <!--<ImageView-->
            <!--android:id="@+id/feed_back_first_img"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:src="@drawable/no_img_upload"/>-->

        <!--<ImageView-->
            <!--android:id="@+id/feed_back_second_img"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:src="@drawable/no_img_upload"/>-->

        <!--<ImageView-->
            <!--android:id="@+id/feed_back_three_img"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:src="@drawable/no_img_upload"/>-->

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:layout_weight="1"-->
            <!--android:text="可添加3张"-->
            <!--android:textColor="@color/theme_sub_title"-->
            <!--android:textSize="@dimen/title_sub_size"/>-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/feed_back_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_submit_btn"
            android:paddingBottom="4dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="4dp"
            android:text="@string/submit"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/feed_back_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:background="@drawable/bg_reset_btn"
            android:paddingBottom="4dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="4dp"
            android:text="@string/reset"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>