<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/HeaderBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/md_white_1000">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="4dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:text="YAO 健康"
                    android:textColor="@color/body_text_2"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold|italic" />

                <ImageButton
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_search_grey600_24dp" />

                <ImageButton
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_photo_camera_grey600_24dp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

    <com.romens.erp.extend.widget.MultiSwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/main_ad_container"
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/main_ad"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/grey_frame_on_gray_b">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:layout_width="36dp"
                        android:layout_height="36dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="104dp"
                    android:background="@android:color/white"
                    android:orientation="horizontal">
                    <!--drug helper-->
                    <LinearLayout
                        android:id="@+id/tab_drug_helper"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/tab_drug_helper_icon"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginBottom="8dp"
                            android:background="@drawable/tab_green" />

                        <TextView
                            android:id="@+id/tab_drug_helper_title"
                            style="@style/TabTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="32dp"
                            android:text="@string/tab_drug_helper_title" />

                    </LinearLayout>
                    <!--health updates-->
                    <LinearLayout
                        android:id="@+id/tab_health_updates_helper"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/tab_health_updates_icon"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginBottom="8dp"
                            android:background="@drawable/tab_orange" />

                        <TextView
                            android:id="@+id/tab_health_updates_title"
                            style="@style/TabTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="32dp"
                            android:text="@string/tab_health_updates_title" />

                    </LinearLayout>
                    <!--drug store-->
                    <LinearLayout
                        android:id="@+id/tab_drug_store"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/tab_drug_store_icon"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginBottom="8dp"
                            android:background="@drawable/tab_brown" />

                        <TextView
                            android:id="@+id/tab_drug_store_title"
                            style="@style/TabTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="32dp"
                            android:text="@string/tab_drug_store_title" />

                    </LinearLayout>
                    <!--person center-->
                    <LinearLayout
                        android:id="@+id/tab_person_center"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/tab_person_center_icon"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginBottom="8dp"
                            android:background="@drawable/tab_blue" />

                        <TextView
                            android:id="@+id/tab_person_center_title"
                            style="@style/TabTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="32dp"
                            android:text="@string/tab_person_center_title" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </com.romens.erp.extend.widget.MultiSwipeRefreshLayout>

</LinearLayout>